FINERACT-2169: Refactor field configuration api controller;